--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./src/assets/enlarge__5fe3be0a-d437-464f-8a9d-34e97b3c0544-fotor-bg-remover-20231109111424.png"
+    />
+    <title>Trade House | Sizning investitsion hamkoringiz</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
